# brookpay-context-trap

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
brookpay/: __init__.py
brookpay/api/: __init__.py  handlers.py  router.py  schemas.py
brookpay/app/: __init__.py  wiring.py
brookpay/billing/: __init__.py  invoicing.py  tariffs.py
brookpay/config/: __init__.py  constants.py  settings.py
brookpay/core/: __init__.py  api.py  audit.py  cache.py  errors.py  registry.py
brookpay/fx/: __init__.py  engine.py  rates.py
brookpay/jobs/: __init__.py  compliance_export.py  low_balance_alerts.py  scheduler.py
brookpay/models/: __init__.py  account.py  transaction.py  user.py
brookpay/reporting/: __init__.py  analytics.py  formatting.py  statements.py
brookpay/risk/: __init__.py  limits.py  withdrawals.py
brookpay/services/: __init__.py  account_service.py  notifications.py  onboarding.py  payouts.py
brookpay/store/: __init__.py  fixtures.py  repository.py
brookpay/utils/: __init__.py  idgen.py  money.py  timeutils.py  validation.py
scripts/: run_scenarios.py
tests/: test_fx.py  test_money.py  test_validation.py
